--- a/myrecipe/src/index.scss
+++ b/myrecipe/src/index.scss
@@ -18,4 +18,18 @@ body {
     color: $textcolor;
     font-size: $smallSize;
 }
+.loader {
+    background: white;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    flex-direction: column;
+    min-height: 100vh;
+}
 
+.text-loading {
+    font-weight: 500;
+    color: #2c2c2c;
+}
